--- a/Cour-Html-Css/Site-web-1/style-1.css
+++ b/Cour-Html-Css/Site-web-1/style-1.css
@@ -19,7 +19,14 @@ h1 {
 h2 {
     color: #444;
     font-size: 55px;
-
+}
+h4 {
+ font-size: 24px;
+ color: #444;
+}
+p {
+line-height: 20px;
+color: #777;
 }
 ul {
     list-style: none;
@@ -86,4 +93,40 @@ margin-bottom: 20px;
     text-align: center;
     line-height: 50px;
     border-radius: 3px;
+}
+
+.button-1:hover {
+   background-color: #02b8dd;
+}
+
+/****************** STEPS *******************/
+
+#steps ul {
+    margin: 80px 0; 
+
+}
+#steps ul li {
+    width: 300px;
+    float: left;
+    padding-top: 140px;
+    text-align: center;
+    margin-right: 10px;
+}
+#steps h4 {
+    text-transform: uppercase;
+    margin: 20px;
+}
+#steps p {
+margin-bottom: 20px;
+}
+#steps-1 {
+    background: url('/Site-web-1/media-1/steps-icon-1.png') no-repeat top center;
+
+}
+#steps-2 {
+    background: url('/Site-web-1/media-1/steps-icon-2.png') no-repeat top center;
+    
+}
+#steps-3 {
+    background: url('/Site-web-1/media-1/steps-icon-3.png') no-repeat top center;
 }
