--- a/Cour-Html-Css/Site-web-1/style-1.css
+++ b/Cour-Html-Css/Site-web-1/style-1.css
@@ -43,6 +43,13 @@ a {
 .orange {
     color: #ff7a00;
 }
+.clear {
+    clear: both;
+}
+small {
+    font-size: 13px;
+    font-style: italic;
+}
 
 /* HEADER */
 
@@ -72,7 +79,7 @@ header nav ul li a {
 
 #main-image {
     height: 580px;
-    background: url('/Site-web-1/media-1/main.jpg') center;
+    background: url('/media-1/main.jpg') center;
 }
 
 #main-image h2 {
@@ -120,13 +127,59 @@ margin-bottom: 20px;
 margin-bottom: 20px;
 }
 #steps-1 {
-    background: url('/Site-web-1/media-1/steps-icon-1.png') no-repeat top center;
+    background: url('/media-1/steps-icon-1.png') no-repeat top center;
 
 }
 #steps-2 {
-    background: url('/Site-web-1/media-1/steps-icon-2.png') no-repeat top center;
+    background: url('/media-1/steps-icon-2.png') no-repeat top center;
     
 }
 #steps-3 {
-    background: url('/Site-web-1/media-1/steps-icon-3.png') no-repeat top center;
+    background: url('/media-1/steps-icon-3.png') no-repeat top center;
+}
+
+/****************************** POSSIBILITIES ***************************/
+
+#possibilities {
+    background-color: #efefef;
+    padding: 60px 0;
+}
+#possibilities article {
+    width: 460px;
+    height: 270px;
+    float: left;
+    border-radius: 10px;
+}
+#possibilities article:first-child {
+    margin-right: 20px;
+}
+.overlay {
+    background: rgba(255, 255, 255, 0.95);
+    height: 100%;
+    width: 190px;
+    padding: 20px;
+    border-radius: 10px 0 0 10px;
+    text-align: center;
+    box-sizing: border-box;
+}
+article h4 {
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    text-align: center;
+}
+#possibilities p {
+    text-align: center;
+    margin-bottom: 20px;
+}
+.button-2 {
+    color: #fff;
+    background-color: #ff7a00;
+    padding: 6px 20px;
+    border-radius: 3px;
+}
+.button-2:hover {
+    color: #fff;
+    background-color: #02b8dd;
 }
